@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 3.1.5 - SVN
 -------------------
+ - Fix testing for empty output with strlen (port from ETH tree).
 
 Version 3.1.4 - 27 August 2011
 ------------------------------
